<resources>
    <string name="app_name">Notifier Ecosystem</string>
    <string name="action_settings">Settings</string>
    <string name="menu_login">Log in</string>
    <string name="menu_logout">Log out</string>
    <string name="login_label">Log In</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="send_text">Send</string>
    <string name="title_sign_in">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_stud">Sign Up as Student</string>
    <string name="sign_up_prof">Sign Up as Professor</string>
    <string name="sign_up_text">Not a registered user?</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Name</string>
    <string name="hint_course_name">Course Name</string>
    <string name="hint_course_code">Course Code</string>
    <string name="hint_roll_number">Roll Number</string>
    <string name="sign_in">Sign In</string>
    <string name="create_session">Create Session</string>
    <string name="create_course">Create Course</string>
    <string name="join_session">Join Session</string>
    <string name="enrol_course">Enrol Course</string>
    <string name="heading_pending">Pending Notifications</string>
    <string name="heading_all">All Notifications</string>
    <string name="past_records">View Past Records</string>
    <string name="my_past_records">View My Past Records</string>
    <string name="stop_session">Stop Session</string>
    <string name="hello_world">Hello world!</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="title_activity_delete_this">deleteThis</string>
</resources>
