<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_color"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    tools:context="com.software.vivek.notifierecosytem2.SignInActivity">


    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/login"
            android:textColor="@color/white_greyish"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/field_email"
            android:singleLine="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"

            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            android:inputType="textEmailAddress"
            android:hint="@string/email" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/field_password"
            android:singleLine="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"

            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/passowrd"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="8dp" >

            <!--<CheckBox-->
                <!--android:id="@+id/show_hide_password"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:text="@string/show_pwd"-->
                <!--android:textColor="@color/white"-->
                <!--android:textSize="14sp" />-->

            <!--<TextView-->
                <!--android:id="@+id/forgot_password"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:gravity="end"-->
                <!--android:padding="5dp"-->
                <!--android:text="@string/forgot"-->
                <!--android:textColor="@color/white"-->
                <!--android:textSize="14sp" />-->
        </LinearLayout>

        <Button
            android:id="@+id/button_sign_in"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@drawable/loginbutton_selector"
            android:padding="3dp"
            android:textColor="#009688"
            android:textSize="17sp"
            android:textStyle="bold"
            android:text="@string/login" />
    </LinearLayout>

    <TextView
        android:id="@+id/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/newUser"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <Button
        android:id="@+id/button_sign_up_prof"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:background="@drawable/loginbutton_selector"
        android:layout_below="@+id/createAccount"
        android:padding="3dp"
        android:text="@string/sign_up_prof"
        android:textColor="#009688"
        android:textSize="17sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_sign_up_stud"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:background="@drawable/loginbutton_selector"
        android:layout_below="@+id/button_sign_up_prof"
        android:padding="3dp"
        android:text="@string/sign_up_stud"
        android:textColor="#009688"
        android:textSize="17sp"
        android:textStyle="bold" />



</RelativeLayout>