<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background_color"
    tools:context=".MainActivityStudent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_enrol_course"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/loginbutton_selector"
            android:padding="3dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/enrol_course"
            android:textColor="#009688"
            android:textSize="17sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_join_session"
            android:text="@string/join_session"
            android:textColor="#009688"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="104dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/loginbutton_selector"
            android:padding="3dp"
            />
            <!--android:onClick="onSignUpClicked"/>-->

        <Button
            android:id="@+id/button_past_records_stud"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/loginbutton_selector"
            android:padding="3dp"

            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="#009688"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginTop="102dp"
            android:text="@string/my_past_records" />
        <!--</LinearLayout>-->
    </LinearLayout>

</RelativeLayout>