<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background_color"
    tools:context=".CreateCourseActivity">

<!--<ImageView-->
<!--android:id="@+id/icon"-->
<!--android:layout_width="wrap_content"-->
<!--android:layout_height="wrap_content"-->
<!--android:layout_centerHorizontal="true"-->
<!--android:layout_marginBottom="@dimen/activity_vertical_margin"-->
<!--android:src="@drawable/firebase_lockup_400" />-->

<!--&lt;!&ndash;<LinearLayout&ndash;&gt;-->
<!--android:id="@+id/layout_email_password"-->
<!--android:layout_width="wrap_content"-->
<!--android:layout_height="wrap_content"-->
<!--android:layout_centerHorizontal="true"-->
<!--android:orientation="horizontal">-->

<EditText
    android:id="@+id/field_course_name"
    android:singleLine="true"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"

    android:drawablePadding="8dp"
    android:gravity="center_vertical"
    android:padding="10dp"
    android:textColor="@color/white"
    android:textColorHint="@color/white"
    android:textSize="16sp"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="86dp"
    android:ellipsize="end"
    android:hint="@string/hint_course_name"
    android:inputType="textEmailAddress"
    android:maxLines="1" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:background="@color/white_greyish" />
<EditText
    android:id="@+id/field_course_code"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:singleLine="true"
    android:layout_width="fill_parent"
    android:layout_marginTop="20dp"
    android:background="@android:color/transparent"

    android:drawablePadding="8dp"
    android:gravity="center_vertical"
    android:padding="10dp"
    android:textColor="@color/white"
    android:textColorHint="@color/white"
    android:textSize="16sp"
    android:layout_centerHorizontal="true"
    android:ellipsize="end"
    android:hint="@string/hint_course_code"
    android:inputType="text"
    android:maxLines="1" />

<!--</LinearLayout>-->

<!--<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--android:id="@+id/radio"-->
<!--android:layout_width="fill_parent"-->
<!--android:layout_height="wrap_content"-->
<!--android:layout_alignParentStart="true"-->
<!--android:layout_alignParentTop="true"-->
<!--android:layout_marginTop="166dp"-->
<!--android:orientation="vertical">-->

<!--<RadioButton-->
<!--android:id="@+id/radio_student"-->
<!--android:layout_width="wrap_content"-->
<!--android:layout_height="wrap_content"-->
<!--android:layout_marginTop="50dp"-->
<!--android:text="Student" />-->

<!--<RadioButton-->
<!--android:id="@+id/radio_studessor"-->
<!--android:layout_width="wrap_content"-->
<!--android:layout_height="wrap_content"-->
<!--android:text="studessor" />-->

<!--</RadioGroup>-->

<!--<LinearLayout-->
<!--android:id="@+id/layout_buttons"-->
<!--android:layout_width="wrap_content"-->
<!--android:layout_height="wrap_content"-->
<!--android:layout_alignTop="@+id/field_email1"-->
<!--android:layout_centerHorizontal="true"-->
<!--android:orientation="horizontal">-->

    <Button
        android:id="@+id/button_create_course_fin"
        android:layout_marginTop="162dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/loginbutton_selector"
        android:padding="3dp"
        android:textColor="#009688"
        android:textSize="17sp"
        android:textStyle="bold"
        android:text="@string/create_course" />

<!--</LinearLayout>-->


</RelativeLayout>
