<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_color"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.software.vivek.notifierecosytem2.ProfessorSignUpActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/signUp"
        android:textColor="@color/white_greyish"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/field_name_prof"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@mipmap/user"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/fullName"
        android:inputType="textCapWords"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />

    <EditText
        android:id="@+id/field_email_prof"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@mipmap/email"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />

    <!--<EditText-->
        <!--android:id="@+id/mobileNumber"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="5dp"-->
        <!--android:background="@android:color/transparent"-->
        <!--android:drawableLeft="@drawable/phone"-->
        <!--android:drawablePadding="8dp"-->
        <!--android:gravity="center_vertical"-->
        <!--android:hint="@string/mobileNumber"-->
        <!--android:inputType="phone"-->
        <!--android:padding="10dp"-->
        <!--android:singleLine="true"-->
        <!--android:textColor="@color/white"-->
        <!--android:textColorHint="@color/white"-->
        <!--android:textSize="16sp" />-->

    <!--<View-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="1px"-->
        <!--android:background="@color/white_greyish" />-->

    <!--<EditText-->
        <!--android:id="@+id/location"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="5dp"-->
        <!--android:background="@android:color/transparent"-->
        <!--android:drawableLeft="@drawable/location"-->
        <!--android:drawablePadding="8dp"-->
        <!--android:gravity="center_vertical"-->
        <!--android:hint="@string/location"-->
        <!--android:inputType="textCapWords"-->
        <!--android:padding="10dp"-->
        <!--android:singleLine="true"-->
        <!--android:textColor="@color/white"-->
        <!--android:textColorHint="@color/white"-->
        <!--android:textSize="16sp" />-->

    <!--<View-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="1px"-->
        <!--android:background="@color/white_greyish" />-->

    <EditText
        android:id="@+id/field_password_prof"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@mipmap/password"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/passowrd"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white_greyish" />

    <!--<EditText-->
        <!--android:id="@+id/confirmPassword"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="5dp"-->
        <!--android:background="@android:color/transparent"-->
        <!--android:drawableLeft="@drawable/confirm_password"-->
        <!--android:drawablePadding="8dp"-->
        <!--android:gravity="center_vertical"-->
        <!--android:hint="@string/confirmPassword"-->
        <!--android:inputType="textPassword"-->
        <!--android:padding="10dp"-->
        <!--android:singleLine="true"-->
        <!--android:textColor="@color/white"-->
        <!--android:textColorHint="@color/white"-->
        <!--android:textSize="16sp" />-->

    <!--<CheckBox-->
        <!--android:id="@+id/terms_conditions"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="7dp"-->
        <!--android:text="@string/terms_conditions"-->
        <!--android:textColor="@color/white"-->
        <!--android:textSize="14sp" />-->

    <Button
        android:id="@+id/button_sign_up_prof_fin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/loginbutton_selector"
        android:padding="3dp"
        android:text="@string/signUp"
        android:textColor="@color/background_color"
        android:textSize="17sp"
        android:textStyle="bold" />


</LinearLayout>